Color selector for sticky notes is now opaque instead of translucent; it no longer gets covered up by the in-place editor when the mouse moves into the div, and it disappears when the palette icon is clicked a second time.  Now all that's left to do is write the selector.

--- a/static/webcit.css
+++ b/static/webcit.css
@@ -1343,9 +1343,10 @@ li.event_unread span, a.event_read_title {
 	position: absolute;
 	width: 200px;
 	height: 200px;
-	border: 1px solid black;
+	border: 1px solid #333;
 	background-color: #ffff00;
 	overflow: hidden;
+	z-index: 10;
 }
 
 .stickynote_titlebar {
@@ -1378,6 +1379,9 @@ li.event_unread span, a.event_read_title {
 	width: 48px;
 	height: 48px;
 	background-color: #ffffff;
+	border: 1px solid #333;
+	z-index: 15;
+	display: none;
 }
 
 .stickynote_palette table {
@@ -1388,7 +1392,4 @@ li.event_unread span, a.event_read_title {
 .stickynote_palette td {
 	width: 16px;
 	height: 16px;
-	filter:alpha(opacity=100); 
-   	-moz-opacity:1.0;         
-   	opacity: 1.0;
 }
